--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,7 @@ mybatis:
   mapper-locations: "classpath*:mapper/*xml"
 
 datasource:
+  data-source-key-name: "dataSourceKey"
   definitions:
     - name: schemaA
       url: jdbc:mysql://localhost:3306/schema_a?useSSL=false&serverTimezone=UTC
